<resources>
    <string name="app_name">Hercarrdroid</string>
    <!-- activities title section -->
    <string name="activity_login">Login</string>
    <string name="activity_sing_up">Sing Up</string>
    <!-- navigation drawer section -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_recycler_view">Recycler View</string>
    <string name="title_web_service">Web Service</string>
    <string name="title_view_pager">View Pager</string>
    <string name="title_camera">Camera</string>
    <string name="title_map">Map</string>
    <string name="title_configuration">Configuration</string>
    <string name="title_settings">Settings</string>
    <string name="title_log_out">Log out</string>
    <!-- action section -->
    <string name="action_about">About</string>
    <!-- login layout -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="msg_user_not_found">User not found, try again!</string>
    <string name="msg_login_empty_fields">The username and password are required!</string>
    <!-- register layout -->
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sing_up">Sing Up</string>
    <string name="msg_register_user_success">Successfully registered!</string>
    <string name="msg_register_user_error">An error occurs when registering the user!</string>
    <string name="msg_register_empty_fields">Please, fill the required fields!</string>
    <!-- friends layout -->
    <string name="msg_empty_friends">You don\'t have friends yet.</string>
    <!-- camera layout -->
    <string name="action_camera">Camera</string>
    <string name="action_share">Share</string>
    <string name="take_photo_camera">Take photo with camera</string>
    <string name="take_photo_gallery">Select photo from gallery</string>
    <string name="msg_allow_take_picture">It\'s necessary allow to take pictures</string>
    <string name="msg_share_image">Share image with</string>
    <!-- general actions -->
    <string name="ok">Ok</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAvFk6vdBeDPnzClF9rr2bFK33DYR_Nj8k</string>
</resources>
