<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recycler_view"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/title_recycler_view" />
        <item
            android:id="@+id/nav_web_service"
            android:icon="@mipmap/ic_cloud_black_24dp"
            android:title="@string/title_web_service" />
        <item
            android:id="@+id/nav_view_pager"
            android:icon="@mipmap/ic_view_carousel_black_24dp"
            android:title="@string/title_view_pager" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_photo_camera_black_24dp"
            android:title="@string/title_camera" />
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_place_black_24dp"
            android:title="@string/title_map" />
    </group>

    <item android:title="@string/title_configuration">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="@string/title_log_out" />
        </menu>
    </item>

</menu>
